# pik

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
assets/: cities.txt  fruits.txt
src/: main.rs
tests/: cli.rs
